# anat2vessels

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
.spin/: cmds.py
docker/: dockerfile  dockerfile.arm64  entrypoint.py
docker/t1/: dockerfile
docker/t1t2/: dockerfile
docker/t2/: dockerfile
inference/: README.md  csv_from_predictions.py  feature_extraction.py  preprocess_imgs.py  requirements.txt
src/anat2vessels/: csv_from_predictions.py  features.py  preprocess.py  vessels2csv.py
src/anat2vessels/data/: __init__.py  fetch.py
test/: conftest.py  test_anat2vessels.py  test_cli.py  test_features.py  test_ground_truth_fixtures.py  test_preprocess.py  test_vessels2csv.py
